2008-12-11  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.10

2008-12-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-wm.h:
	  Changed the definition of HdWmClientType:s; matchbox expects
	  one bit per client type.  Makes application->switcher transition
	  work again.

2008-12-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Disable the Tasks button when a system-modal dialog is showing.

	* src/home/hd-home.h
	* src/home/hd-home.c:
	  Added hd_home_get_mode().
	* src/home/hd-switcher.h
	* src/home/hd-switcher.c:
	  Added functions to enable/disable the Tasks button.
	* src/util/hd-util.h
	* src/util/hd-util.c:
	  Added hd_util_is_client_system_modal().
	* src/mb/hd-comp-mgr.c:
	  Disable the Tasks button when a system-modal dialog is mapped.
	  Re-enable if the last system-modal is unregistered.

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-dbus.xml: Add GetCurrentViewID method to D-Bus
	  interface.

	* src/home/hd-home.c (hd_home_get_current_view_id):
	* src/home/hd-home.h (hd_home_get_current_view_id): Change return
	  value to unsigned int.

2008-12-10  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Adjusted dimming values so foreground is more distinct.

	* src/launcher/hd-launcher.c (hd_launcher_set_top_blur):
	* src/mb/hd-comp-mgr.c (on_blur_timeline_new_frame):

2008-12-10  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Set "ellipsization" to none in launcher tiles.

	* src/launcher/hd-launcher-tile.c (hd_launcher_tile_set_text):

2008-12-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/mb/hd-app.c: set MB_SECONDARY on secondary windows

2008-12-09  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (bg_image_notify, bg_image_dest_height,
	  hd_home_view_allocate, hd_home_view_dispose,
	  get_bg_image_processed_name, process_bg_image_thread,
	  hd_home_view_refresh_bg, hd_home_view_set_property,